styles/style.css
/* --===== Imports =====-- */
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');

/* Colors */
:root {
  --primary: #225522;
  --secondary: #555522;
  --tertiary: #999977;
  --offWhite: #eae7e7;
  --sage: #557744;
  --nearBlack: #111;
  --midBlack: #333;
}

/* --=======================-- */
/* --===== Base Styles =====-- */
/* --=======================-- */
html {
  /* parallax */
  width: 100%;
  height: 100%;
  overflow: hidden;
  /* end parallax */
}

body {
  /* parallax */
  width: 100%;
  height: 100%;
  /* end parallax */

  font-family: 'Poppins', sans-serif;
  background: #111;
}

#parallaxContainer {
  /* parallax */
  width: 100%;
  height: 100%;
  perspective: 4px;
  overflow-x: hidden;
  overflow-y: auto;
  /* end parallax */
}

/* --=========================-- */
/* --===== General Links =====-- */
/* --=========================-- */
a:link,
a:visited {
  text-decoration: none;
}

a:hover,
a:active {
  text-decoration: underline;
}

/* --==================-- */
/* --===== Header =====-- */
/* --==================-- */
header {
  /* parallax */
  width: 100%;
  min-height: 100vh;
  position: absolute;
  transform-style: preserve-3d;
  /* end parallax */
}

header::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: block;
  background: url('../images/leaves.jpg');
  background-size: cover;
  z-index: 0;
  transform: translateZ(-10px) scale(3.7);
}

/* header div {
  transform: translateZ(0px) scale(1);
} */

/* --=======================================-- */
/* --===== Primary Content Base Styles =====-- */
/* --=======================================-- */
#primaryContent {
  position: relative;
  z-index: 2;
}

section {
  background-color: rgba(240, 240, 240, 0.7);
  margin: 5% 0;
}

/* --===============-- */
/* --===== Nav =====-- */
/* --===============-- */

#navButton {
  position: fixed;
  bottom: 30px;
  right: 20px;
}

/* --=================-- */
/* --===== Intro =====-- */
/* --=================-- */
#intro {
  margin: 20% 0;
  background: rgba(240, 240, 240, 0.7);
}

#intro h1 {
  font-size: 4.5rem;
  font-weight: bold;
  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
}

#intro h2 {
  font-size: 2.2rem;
  font-weight: 300;
}

#intro p {
  font-size: 1.5em;
}

#social a {
  text-decoration: none;
}

#social a img {
  width: 50px;
}

#intro img {
  width: 80%;
}

/* --=================-- */
/* --===== About =====-- */
/* --=================-- */
#about span {
  font-weight: bold;
}

/* --=====================-- */
/* --===== Portfolio =====-- */
/* --=====================-- */
.portfolioContainer {
  /* grid-column: 1 / span 2; */
  /* position: relative; */
  /* width: 960px; */
  /* margin: auto; */
  -webkit-transition: all 1s ease;
  -moz-transition: all 1s ease;
  -o-transition: all 1s ease;
  transition: all 1s ease;

  /* outline: 1px solid red; */
}

#filters {
  margin: 1%;
  padding: 0;
  list-style: none;
}

#filters li {
  float: left;
}

#filters li span {
  display: block;
  padding: 5px 20px;
  text-decoration: none;
  cursor: pointer;
}

#filters li span.active {
  background: var(--primary);
  color: var(--offWhite);
}

#portfoliolist {
  /* clear: both; */
  margin-top: 50px;
  /* margin: -2%; */
}

#portfoliolist .portfolio {
  /* -webkit-box-sizing: border-box; */
  /* -moz-box-sizing: border-box; */
  /* -o-box-sizing: border-box; */
  /* box-sizing: border-box; */
  /* width: 23%; */
  /* margin: 1%; */
  display: none;
  /* float: left; */
  /* overflow: hidden; */
}

.portfolio-wrapper {
  overflow: hidden;
  position: relative !important;
  background: var(--midBlack);
  cursor: pointer;
}

.portfolio img {
  max-width: 100%;
  position: relative;
  top: 0;
  -webkit-transition: all 600ms cubic-bezier(0.645, 0.045, 0.355, 1);
  transition: all 600ms cubic-bezier(0.645, 0.045, 0.355, 1);
}

.portfolio .label {
  position: absolute;
  width: 100%;
  height: 150px;
  bottom: -150px;
  -webkit-transition: all 300ms cubic-bezier(0.645, 0.045, 0.355, 1);
  transition: all 300ms cubic-bezier(0.645, 0.045, 0.355, 1);
}

.portfolio .label-bg {
  background: var(--primary);
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

.portfolio .label-text {
  color: var(--offWhite);
  position: relative;
  z-index: 500;
  padding: 5px 8px;
}

.portfolio .text-category {
  display: block;
  font-size: 9px;
}

.portfolio:hover .label {
  bottom: 0;
}

.portfolio:hover img {
  top: -30px;
}

.portfolio a {
  color: var(--offWhite);
}

.portfolio p {
  /* font-weight: normal; */
  font-size: 0.8em;
}

/*  #Mobile (Portrait) - Note: Design for a width of 320px */
/* @media only screen and (max-width: 959px) {
  .portfolioContainer {
    width: 95%;
  }

  #portfoliolist .portfolio {
    width: 48%;
    margin: 1%;
  }
} */

/* #Mobile (Landscape) - Note: Design for a width of 480px */
/* @media only screen and (min-width: 480px) and (max-width: 767px) {
  .portfolioContainer {
    width: 70%;
  }
} */

/* --=====================-- */
/* --===== Academics =====-- */
/* --=====================-- */
#academics ul li {
  background-color: rgba(240, 240, 240, 0.7);
}

/* --==================-- */
/* --===== Resume =====-- */
/* --==================-- */

/* --===================-- */
/* --===== Contact =====-- */
/* --===================-- */

/* --==================-- */
/* --===== Footer =====-- */
/* --==================-- */

/* --===== Boostrap Grid Outlines =====-- */

/* [class*='row'] {
  outline: 2px dashed lime;
}
[class*='col'] {
  outline: 2px dashed aqua;
}
[class*='con'] {
  outline: 2px dashed coral;
} */

